--- a/vignettes/endpointspkg.Rmd
+++ b/vignettes/endpointspkg.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
-date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+title: "Endpoints"
+author: "Jon Gilman"
+date: "`r Sys.Date(12/09/2018)`"
+output: rmarkdown::html_Endpoints
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Endpoints}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
