--- a/vignettes/endpointspkg.Rmd
+++ b/vignettes/endpointspkg.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Endpoints"
 author: "Jon Gilman"
-date: "`r Sys.Date(12/09/2018)`"
-output: rmarkdown::html_Endpoints
+date: "`r Sys.Date()`"
+output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Endpoints}
+  %\VignetteIndexEntry{endpointspkg}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -30,9 +30,7 @@ Note the various macros within the `vignette` section of the metadata block abov
 
 The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
 
-    output: 
-      rmarkdown::html_Endpoints:
-        css: mystyles.css
+
 
 ## Figures
 
